--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,7 +7,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="https://ide-4726fd914e92481b816a6d9f882f70ef-8080.cs50.ws/">Index</a>
+          <a class="nav-link" href="https://rosenthal-porfolio.herokuapp.com/">Index</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/projects">Projects</a>
