--- a/templates/nav.html
+++ b/templates/nav.html
@@ -7,10 +7,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link" href="https://rosenthal-porfolio.herokuapp.com/">Index</a>
+          <a class="nav-link" href="/">Index</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/projects">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/siteinfo">About This Site</a>
         </li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
