--- a/templates/siteinfo.html
+++ b/templates/siteinfo.html
@@ -30,9 +30,9 @@
 
     <h2>About This Site</h2>
     <p>This site is brought to you by Colin Rosenthal, who is a 9th grade student at Seabury Hall at the time of the site's creation.</p>
-    <p>It is written in the HTML language on CS50, and a repository containing the code for the site is uploaded to Github.</p>
-    <p>The code is uploaded to Heroku App through the Github Deployment Flow, and is running as a permenant public site.</p>
-    <p>Code for components such as the cards and navbar are taken from Bootstrap, and Flask provides the framework for the server.</p>
+    <p>It is written in the HTML language on <a href="https://ide.cs50.io/">CS50</a>, and a repository containing the code for the site is uploaded to <a href="https://github.com/">Github</a>.</p>
+    <p>The code is uploaded to <a href="https://id.heroku.com/">Heroku App</a> through the Github Deployment Flow, and is running as a permenant public site.</p>
+    <p>Code for components such as the cards and navbar are taken from <a href="https://getbootstrap.com/">Bootstrap</a>, and Flask provides the framework for the server.</p>
     <p>This site is created in accordance to an assignment's instructions for a Beginning Programming high school elective class.</p>
     <p>If you have any questions regarding the site, contact me using my school email, crosenthal25@seaburyhall.org</p>
     <p>- Colin Rosenthal, Class of 2025</p>
