--- a/templates/projects.html
+++ b/templates/projects.html
@@ -31,7 +31,7 @@
     <div class="card-body">
       <h5 class="card-title">{{ project.name }}</h5>
       <p class="card-text">{{ project.description }}</p>
-      <a href="/projects" class="btn btn-primary">Go to Projects</a>
+      <a href="/projects" class="btn btn-primary">See more</a>
     </div>
   </div>
   </div>
