--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,10 @@
 
         <style>
             h2 {color:black;}
+            h3 {color:yellow}
             p {color:midnightblue;}
+            p1 {color:yellow}
+            p2 {color:royalblue}
         </style>
         </head>
         <body>
@@ -29,20 +32,26 @@
 <h1></h1>
 
     <h2>This is a heading</h2>
-    <p>This is a paragraph.</p>
+    <p>This is a paragraph</p>
 
     <h2>This is a list</h2>
         <ul>
-            <li>Item 1</li>
-            <li>Item 2</li>
-            <li>Item 3</li>
-            <li>Item 4</li>
+            <li>Four calling birds</li>
+            <li>Three french hens</li></li>
+            <li>Two turtle doves</li>
+            <li>And a partridge in a pear tree</li>
         </ul>
 
     <h2>This is a font</h2>
         <p style="color:white">This is a paragraph.</p>
         <p style="font-family:Comic Sans MS">This is a paragraph.</p>
         <p style="font-size:10px">This is a paragraph.</p>
+        <h1></h1>
+        <p2>A long time ago in a galexy far,</p2>
+        <p2>far away....</p2>
+        <h1></h1>
+        <p1>Episode IV</p1>
+        <h3>A NEW HOPE</h3>
 
 </body>
 
@@ -63,7 +72,7 @@
 
     <h2>This is an alert</h2>
     <div class="alert alert-success" role="alert">
-  A simple success alert—check it out!
+  Green alert, for all your real estate needs (Green = $$$)
 </div>
 
 <h2>This is an accordian</h2>
@@ -71,36 +80,36 @@
   <div class="accordion-item">
     <h2 class="accordion-header" id="panelsStayOpen-headingOne">
       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseOne" aria-expanded="true" aria-controls="panelsStayOpen-collapseOne">
-        Accordion Item #1
+        Thing #1
       </button>
     </h2>
-    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse show" aria-labelledby="panelsStayOpen-headingOne">
+    <div id="panelsStayOpen-collapseOne" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingOne">
       <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong>What are you doing here?</strong> This is supposed to be a secret!<strong> Get out! Get out!</strong>
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="panelsStayOpen-headingTwo">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseTwo" aria-expanded="false" aria-controls="panelsStayOpen-collapseTwo">
-        Accordion Item #2
+        Thing #2
       </button>
     </h2>
     <div id="panelsStayOpen-collapseTwo" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingTwo">
       <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        <strong>You're not supposed to be here!</strong> Go bother Thing #1 or something.
       </div>
     </div>
   </div>
   <div class="accordion-item">
     <h2 class="accordion-header" id="panelsStayOpen-headingThree">
       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#panelsStayOpen-collapseThree" aria-expanded="false" aria-controls="panelsStayOpen-collapseThree">
-        Accordion Item #3
+        Was there ever a Thing #3?
       </button>
     </h2>
     <div id="panelsStayOpen-collapseThree" class="accordion-collapse collapse" aria-labelledby="panelsStayOpen-headingThree">
       <div class="accordion-body">
-        <strong>This is the third item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
+        Maybe they will leave if I pretend to sleep?<strong> ZZZZZZZZZzzzzzzzzzzzzzzzz...</strong> Are you gone yet?
       </div>
     </div>
   </div>
@@ -110,9 +119,9 @@
 <div class="card" style="width: 18rem;">
   <img src="/static/projectslogo.png" class="card-img-top" alt="...">
   <div class="card-body">
-    <h5 class="card-title">Card title</h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-    <a href="/projects" class="btn btn-primary">Go to Projects</a>
+    <h5 class="card-title">Bippity Boppity Boo</h5>
+    <p class="card-text">Why don't you make like a tree and get out of here?</p>
+    <a href="/projects" class="btn btn-primary">Go to Projects... or something</a>
   </div>
 </div>
 
