--- a/templates/nav.html
+++ b/templates/nav.html
@@ -20,10 +20,10 @@
             Dropdown
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
+            <li><a class="dropdown-item" href="#">To be</a></li>
+            <li><a class="dropdown-item" href="#">or not to be</a></li>
+            <li><a class="dropdown-item" href="#">That is the question</a></li>
+            <li><a class="dropdown-item" href="#">- William Shakespeare</a></li>
           </ul>
         </li>
         <li class="nav-item">
